--- a/assets/style.css
+++ b/assets/style.css
@@ -84,8 +84,10 @@ body {
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
+	font-size: 1rem;
 }
-#about-me p {
+
+.about-me__txt {
 	width: 80%;
 	font-size: 14px;
 }
@@ -147,6 +149,8 @@ body {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
+	font-size: 2rem;
+	line-height: 1.2;
 
 }
 .quote__author {
