--- a/assets/style.css
+++ b/assets/style.css
@@ -270,7 +270,7 @@ input[type="submit"] {
 
 	}
 	.picture {
-		width: 50%;
+		width: 300px;
 	}
 	.picture.left::before {
 		width: 100%;
@@ -354,7 +354,7 @@ input[type="submit"] {
 		width: 100%;
 	}
 	.picture {
-		width: 80%;
+		width: 200px;
 	}
 }
 
